Add basic Sphinx doc config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,3 +96,30 @@ deps = [
   "pytest-cov"
 ]
 commands = [["pytest"]]
+
+[tool.tox.env.docs]
+description = "make docs"
+base_python = ["python3.13"]
+deps = [
+  "sphinx",  
+  "furo",
+]
+commands = [
+  ["sphinx-build", "-n", "-W", "--keep-going", "-b", "html", "docs/source/", "docs/build/"]
+]
+
+[tool.tox.env.devdocs]
+description = "Write docs"
+base_python = ["python3.13"]
+deps = [
+  "sphinx",
+  "sphinx-autobuild", 
+  "sphinx-paramlinks",
+  "sphinx-rtd-theme",
+  "piccolo-theme",
+  "sphinx-celery",
+  "furo",
+]
+commands = [
+  ["sphinx-autobuild", "--port", "8100", "docs/source/", "docs/build/"]
+]
