Refine docs further

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,7 +115,9 @@ deps = [
   "sphinx",
   "sphinx-autobuild", 
   "sphinx-paramlinks",
+  "sphinx-copybutton",
   "sphinx-rtd-theme",
+  "myst-parser",
   "piccolo-theme",
   "sphinx-celery",
   "furo",
