--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,7 @@ deps = [
   "sphinx-paramlinks",
   "sphinx-copybutton",
   "sphinx-rtd-theme",
+  "sphinxext-opengraph",
   "myst-parser",
   "piccolo-theme",
   "sphinx-celery",
