--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ description = "make docs"
 base_python = ["python3.13"]
 deps = [ 
   "furo",
+  "geopandas",
   "linkify-it-py",
   "matplotlib",
   "myst-parser", 
@@ -139,5 +140,5 @@ deps = [
   "sphinxext-opengraph", 
 ]
 commands = [
-  ["sphinx-autobuild", "--port", "8100", "docs/source/", "docs/build/"]
+  ["sphinx-autobuild", "--port", "8101", "docs/source/", "docs/build/"]
 ]
