--- a/.github/workflows/build-deploy-docs.yml
+++ b/.github/workflows/build-deploy-docs.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload built docs as artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_build
+          path: docs/build
 
   deploy:
     needs: build
