Add additional trigger to PyPI action

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -3,6 +3,7 @@ name: Publish Python distribution to PyPI and TestPyPI
 on:
   push:
     branches: ["main"]
+    tags: ["*"]
   workflow_dispatch:
 
 jobs:
@@ -56,6 +57,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python  distribution  to TestPyPI
+    if: github.ref == 'refs/heads/main'
     needs:
     - build
     runs-on: ubuntu-latest
