--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -47,6 +47,8 @@ jobs:
         strategy:
             matrix: 
                 python:
+                    - version: "3.14t"
+                      toxenv: "py314t"           
                     - version: "3.13"
                       toxenv: "py313"
                     - version: "3.12"
