--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -62,3 +62,7 @@ jobs:
               run: python -m pip install tox
             - name: Run pytest
               run: tox -e ${{ matrix.python.toxenv }}
+            - name: Upload coverage reports to Codecov
+              uses: codecov/codecov-action@v5
+              with:
+                token: ${{ secrets.CODECOV_TOKEN }}
