Update coverage target in tox setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,7 +119,7 @@ deps = [
   "pytest-cov"
 ]
 commands = [
-  ["pytest", "--cov=your_package", "--cov-branch", "--cov-report=xml"]
+  ["pytest", "--cov", "--cov-branch", "--cov-report=xml"]
 ]
 
 [tool.tox.env.typecheck] 
